--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,12 +1,12 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    makefile                                           :+:      :+:    :+:    #
+#    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: smeixoei <smeixoei@student.42.fr>          +#+  +:+       +#+         #
+#    By: smeixoei <smeixoei@student.42madrid.com    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/06/20 16:43:22 by smeixoei          #+#    #+#              #
-#    Updated: 2023/06/20 16:43:24 by smeixoei         ###   ########.fr        #
+#    Updated: 2023/07/26 12:10:15 by smeixoei         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
